[project]
name = "comfyui-display-value"
description = "Custom node for ComfyUI to show values of primitives (str, float, int, or bool)."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/edelvarden/ComfyUI-Display-Value"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "edelvarden"
DisplayName = "ComfyUI-Display-Value"
Icon = ""